Fixed Navbar on Mobile from obscuring alerts

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -92,7 +92,7 @@ p {
   }
 }
 
-#mainlogo {
+#navlogo {
   font-family: 'Codystar', cursive, Helvetica, sans-serif;
 }
 
